Add environment variable readout

--- a/External/AvalonTools/CMakeLists.txt
+++ b/External/AvalonTools/CMakeLists.txt
@@ -1,5 +1,5 @@
 if(RDK_BUILD_AVALON_SUPPORT)
-set(AVALON_SRC_PATH ${AVALONTOOLS_DIR}/common)
+set(AVALON_SRC_PATH $ENV{AVALONTOOLS_DIR}/common)
 
 add_definitions(-DBUILD_AVALON_SUPPORT)
 
